dnl Alustetaan autoconf
AC_INIT(README)
dnl Paketin nimi ja versio
AM_INIT_AUTOMAKE(Tutris, 1.0.1)
dnl Makrot tiedostoon config.h
AM_CONFIG_HEADER(config.h)
AC_CANONICAL_HOST


dnl Tarvittavat ohjelmat
AC_PROG_INSTALL
AC_PROG_RANLIB
AC_PROG_CC
AC_PROG_CXX

dnl Tarvittavat kirjastot
AC_HEADER_STDC

dnl Tarkistetaan, että SDL on asennettu
SDL_VERSION=1.2.0
AM_PATH_SDL($SDL_VERSION,
            :,
            AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!])
)
CPPFLAGS="$CFLAGS $SDL_CFLAGS -Wall"
LIBS="$LIBS $SDL_LIBS"

dnl Tarkistetaan, että SDL_image on asennettu
AC_CHECK_LIB(SDL_image, IMG_Load)

dnl Luotavat tiedostot
AC_OUTPUT( Makefile data/Makefile src/Makefile )
