AC_INIT(bitefusion,1.0.0)
AM_INIT_AUTOMAKE

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

AC_CANONICAL_HOST

case "$host" in

  *-linux-gnu*)

    LINUX=1

    ;;

  *-mingw32*)

    WIN32=1

    ;;

  *-apple-darwin*)

    DARWIN=1

    ;;

  *)

    AC_ERROR([[Unknown host type "$host"]])

    ;;
esac

AM_CONDITIONAL(LINUX, [test x$LINUX = x1])
AM_CONDITIONAL(WIN32, [test x$WIN32 = x1])
AM_CONDITIONAL(DARWIN, [test x$DARWIN = x1])

AC_SUBST(ARCHFLAGS)

AC_OUTPUT(Makefile)
