dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in, 1.0, 2berny@seznam.cz)
AM_INIT_AUTOMAKE(kulic, 1.0)
AM_CONFIG_HEADER(config.h)

AC_ISC_POSIX
AC_PROG_CC
AC_PROG_CXX
AM_PROG_CC_STDC

AC_HEADER_STDC
AC_HEADER_DIRENT

AC_OUTPUT([
Makefile
czech-doc/Makefile
data/Makefile
data/sfx/Makefile
data/gfx/Makefile
data/gfx/sold/Makefile
data/gfx/fog/Makefile
data/gfx/font/Makefile
data/gfx/gun/Makefile
data/gfx/lights/Makefile
data/gfx/shoots/Makefile
data/gfx/deads/Makefile
data/gfx/pup/Makefile
data/gfx/view/Makefile
data/gfx/anim/Makefile
data/gfx/other/Makefile
data/maps/Makefile
include/Makefile
src/Makefile
])
