####### kdevelop will overwrite this part!!! (begin)##########
EXTRA_DIST = 1er.png \
             2er.png \
	     3er.png \
	     3pa.png \
	     4er.png \
	     4pa.png \
	     5er.png \
	     6er.png \
	     background.png \
	     ablage.png \
	     anibutton.png \
	     becher.png \
	     becher1.png \
	     black.png \
	     cha.png \
	     feld.png \
	     fha.png \
	     gabc.png \
	     gstr.png \
	     highscore.png \
	     int.png \
	     int1.png \
	     kabc.png \
	     kni.png \
	     kstr.png \
	     man1.png \
	     menu1.png \
	     menu2.png \
	     menu3.png \
	     menu4.png \
	     menu5.png \
	     menu6.png \
	     menu7.png \
	     menu8.png \
	     menueback.png \
	     pfeil.png \
	     w1.gif \
	     w1.png \
	     w2.gif \
	     w2.png \
	     w3.gif \
	     w3.png \
	     w4.png \
	     w5.png \
	     w6.png 
####### 

install-data-local:
	$(mkinstalldirs) /usr/local/games/knoga/
	$(mkinstalldirs) /usr/local/games/knoga/images/
	$(mkinstalldirs) /usr/local/games/knoga/sounds/
	$(INSTALL_DATA)	1er.png /usr/local/games/knoga/images/1er.png
	$(INSTALL_DATA)	2er.png /usr/local/games/knoga/images/2er.png
	$(INSTALL_DATA)	3er.png /usr/local/games/knoga/images/3er.png
	$(INSTALL_DATA)	4er.png /usr/local/games/knoga/images/4er.png
	$(INSTALL_DATA)	3pa.png /usr/local/games/knoga/images/3pa.png
	$(INSTALL_DATA)	4pa.png /usr/local/games/knoga/images/4pa.png
	$(INSTALL_DATA)	5er.png /usr/local/games/knoga/images/5er.png
	$(INSTALL_DATA)	6er.png /usr/local/games/knoga/images/6er.png
	$(INSTALL_DATA)	ablage.png /usr/local/games/knoga/images/ablage.png
	$(INSTALL_DATA)	anibutton.png /usr/local/games/knoga/images/anibutton.png
	$(INSTALL_DATA)	background.png /usr/local/games/knoga/images/background.png
	$(INSTALL_DATA)	becher.png /usr/local/games/knoga/images/becher.png
	$(INSTALL_DATA)	becher1.png /usr/local/games/knoga/images/becher1.png
	$(INSTALL_DATA)	black.png /usr/local/games/knoga/images/black.png
	$(INSTALL_DATA)	cha.png /usr/local/games/knoga/images/cha.png
	$(INSTALL_DATA)	feld.png /usr/local/games/knoga/images/feld.png
	$(INSTALL_DATA)	fha.png /usr/local/games/knoga/images/fha.png
	$(INSTALL_DATA)	gabc.png /usr/local/games/knoga/images/gabc.png
	$(INSTALL_DATA)	gstr.png /usr/local/games/knoga/images/gstr.png
	$(INSTALL_DATA)	highscore.png /usr/local/games/knoga/images/highscore.png
	$(INSTALL_DATA)	int.png /usr/local/games/knoga/images/int.png
	$(INSTALL_DATA)	int1.png /usr/local/games/knoga/images/int1.png
	$(INSTALL_DATA)	kabc.png /usr/local/games/knoga/images/kabc.png
	$(INSTALL_DATA)	kni.png /usr/local/games/knoga/images/kni.png
	$(INSTALL_DATA)	kstr.png /usr/local/games/knoga/images/kstr.png
	$(INSTALL_DATA)	man1.png /usr/local/games/knoga/images/man1.png
	$(INSTALL_DATA)	menu1.png /usr/local/games/knoga/images/menu1.png
	$(INSTALL_DATA)	menu2.png /usr/local/games/knoga/images/menu2.png
	$(INSTALL_DATA)	menu3.png /usr/local/games/knoga/images/menu3.png
	$(INSTALL_DATA)	menu4.png /usr/local/games/knoga/images/menu4.png
	$(INSTALL_DATA)	menu5.png /usr/local/games/knoga/images/menu5.png
	$(INSTALL_DATA)	menu6.png /usr/local/games/knoga/images/menu6.png
	$(INSTALL_DATA)	menu7.png /usr/local/games/knoga/images/menu7.png
	$(INSTALL_DATA)	menu8.png /usr/local/games/knoga/images/menu8.png
	$(INSTALL_DATA)	menueback.png /usr/local/games/knoga/images/menueback.png
	$(INSTALL_DATA)	pfeil.png /usr/local/games/knoga/images/pfeil.png
	$(INSTALL_DATA)	w1.gif /usr/local/games/knoga/images/w1.gif
	$(INSTALL_DATA)	w1.png /usr/local/games/knoga/images/w1.png
	$(INSTALL_DATA)	w2.gif /usr/local/games/knoga/images/w2.gif
	$(INSTALL_DATA)	w2.png /usr/local/games/knoga/images/w2.png
	$(INSTALL_DATA)	w3.gif /usr/local/games/knoga/images/w3.gif
	$(INSTALL_DATA)	w3.png /usr/local/games/knoga/images/w3.png
	$(INSTALL_DATA)	w4.png /usr/local/games/knoga/images/w4.png
	$(INSTALL_DATA)	w5.png /usr/local/games/knoga/images/w5.png
	$(INSTALL_DATA)	w6.png /usr/local/games/knoga/images/w6.png



uninstall-local:
	-rm -f /usr/local/games/knoga/images/1er.png
	-rm -f /usr/local/games/knoga/images/2er.png
	-rm -f /usr/local/games/knoga/images/3er.png
	-rm -f /usr/local/games/knoga/images/4er.png
	-rm -f /usr/local/games/knoga/images/5er.png
	-rm -f /usr/local/games/knoga/images/6er.png
	-rm -f /usr/local/games/knoga/images/ablage.png
	-rm -f /usr/local/games/knoga/images/anibutton.png
	-rm -f /usr/local/games/knoga/images/background.png
	-rm -f /usr/local/games/knoga/images/becher.png
	-rm -f /usr/local/games/knoga/images/becher1.png
	-rm -f /usr/local/games/knoga/images/black.png
	-rm -f /usr/local/games/knoga/images/cha.png
	-rm -f /usr/local/games/knoga/images/feld.png
	-rm -f /usr/local/games/knoga/images/fha.png
	-rm -f /usr/local/games/knoga/images/gabc.png
	-rm -f /usr/local/games/knoga/images/gstr.png
	-rm -f /usr/local/games/knoga/images/highscore.png
	-rm -f /usr/local/games/knoga/images/int.png
	-rm -f /usr/local/games/knoga/images/int1.png
	-rm -f /usr/local/games/knoga/images/kabc.png
	-rm -f /usr/local/games/knoga/images/kni.png
	-rm -f /usr/local/games/knoga/images/kstr.png
	-rm -f /usr/local/games/knoga/images/man1.png
	-rm -f /usr/local/games/knoga/images/menu1.png
	-rm -f /usr/local/games/knoga/images/menu2.png
	-rm -f /usr/local/games/knoga/images/menu3.png
	-rm -f /usr/local/games/knoga/images/menu4.png
	-rm -f /usr/local/games/knoga/images/menu5.png
	-rm -f /usr/local/games/knoga/images/menu6.png
	-rm -f /usr/local/games/knoga/images/menu7.png
	-rm -f /usr/local/games/knoga/images/menu8.png
	-rm -f /usr/local/games/knoga/images/menueback.png
	-rm -f /usr/local/games/knoga/images/pfeil.png
	-rm -f /usr/local/games/knoga/images/w1.gif
	-rm -f /usr/local/games/knoga/images/w1.png
	-rm -f /usr/local/games/knoga/images/w2.gif
	-rm -f /usr/local/games/knoga/images/w2.png
	-rm -f /usr/local/games/knoga/images/w3.gif
	-rm -f /usr/local/games/knoga/images/w3.png
	-rm -f /usr/local/games/knoga/images/w4.png
	-rm -f /usr/local/games/knoga/images/w5.png
	-rm -f /usr/local/games/knoga/images/w6.png
	
