bmpdir = $(pkgdatadir)/graphics

bmp_DATA = \
	ball.bmp\
	font2.bmp\
	font.bmp\
	playerh.bmp\
	playerv.bmp\
	knifeh.bmp\
	knifehlt.bmp\
	knifehrt.bmp\
	knifev.bmp\
	knifevbt.bmp\
	knifevtt.bmp\
	lazerh.bmp\
	lazerhlt.bmp\
	lazerhrt.bmp\
	lazerv.bmp\
	lazervbt.bmp\
	lazervtt.bmp\
	lightningstrip.bmp\
	blobstrip.bmp\
	firestrip.bmp\
	splitball1.bmp\
	splitball2.bmp\
	splitball3.bmp\
	splitball4.bmp\
	chronoball.bmp\
	kball.bmp\
	kballa.bmp\
	battery.bmp\
	bonus.bmp\
	life.bmp\
	magnet.bmp\
	magnetstill.bmp\
	selection.bmp\
	lava.jpg\
	sidebar.bmp\
	menu.jpg\
	cityscape1.jpg\
	cityscape2.jpg\
	clawball1.jpg\
	clawball2.jpg\
	latebg1.jpg\
	latebg2.jpg\
	grinder1.jpg\
	grinder2.jpg\
	snake1.jpg\
	snake2.jpg\
	spaceship1.jpg\
	spaceship2.jpg\
	refinery1.jpg\
	refinery2.jpg\
	bonus.jpg\
	brpu.bmp

EXTRA_DIST = $(bmp_DATA)
