dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/main.cpp)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(mangopeeler, 0.6.4)

dnl Check for compilers.  We set CFLAGS and CXXFLAGS to null if unset, so
dnl that these macros won't set them to default values that we don't want.
if test "x${CFLAGS-notset}" = "xnotset" ; then
    export CFLAGS
    CFLAGS=""
fi
AC_PROG_CC

if test "x${CXXFLAGS-notset}" = "xnotset" ; then
    export CXXFLAGS
    CXXFLAGS=""
fi
AC_PROG_CXX
AC_HEADER_STDC
AC_PROG_MAKE_SET
AC_PROG_INSTALL

dnl --------------------------------------------------------------------------
dnl General options
dnl --------------------------------------------------------------------------
TR_CPPFLAGS=""
TR_CFLAGS="-Wall -fomit-frame-pointer -ffast-math -fexpensive-optimizations"
TR_CXXFLAGS="-Wall -fomit-frame-pointer -ffast-math -fexpensive-optimizations"
TR_LIBS=""

AC_ARG_ENABLE(debug,     [  --enable-debug          Produce an executable with debugging symbols], 
			 [TR_CFLAGS="-g -Wall"; TR_CXXFLAGS="-g -Wall"],
			 [TR_CPPFLAGS="$TR_CPPFLAGS"])

dnl Use the macro SDL provides to check the installed version of the SDL
dnl development environment.  Abort the configuration process if the
dnl minimum      version we require isn't available.
SDL_VERSION=1.0.8
AM_PATH_SDL($SDL_VERSION,
             :,
            AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!])
           )


dnl Add the SDL preprocessor flags and libraries to the build process
CFLAGS="$CFLAGS $SDL_CFLAGS"
LIBS="$LIBS $SDL_LIBS"

AC_SUBST(CFLAGS)
AC_SUBST(LIBS)


dnl Checks for libraries.
AC_CHECK_LIB(z, gzopen)
dnl Check for SDL_image
AC_CHECK_LIB(SDL_image, IMG_Load, have_SDL_image=yes)
if test x$have_SDL_image = xyes; then
    LIBS="$LIBS -lSDL_image"
else
    AC_MSG_ERROR([*** Can't find the SDL_image library
The SDL_image library can be found at:
http://www.devolution.com/~slouken/SDL/projects/SDL_image/
])
fi

dnl Check for SDL_ttf
AC_CHECK_LIB(SDL_ttf, TTF_Init, have_SDL_ttf=yes)
if test x$have_SDL_image = xyes; then
    LIBS="$LIBS -lSDL_ttf"
else
    AC_MSG_ERROR([*** Can't find the SDL_ttf library
The SDL_ttf library can be found at:
http://www.devolution.com/~slouken/SDL/projects/SDL_ttf/
])
fi

dnl AC_CHECK_LIB(SDL_ttf, TTF_Init)

dnl Replace `main' with a function in -lSGE:
dnl AC_CHECK_LIB(SGE, main)
dnl Replace `main' with a function in -lpthread:
dnl AC_CHECK_LIB(pthread, pthread_create)

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.

CPPFLAGS="$CPPFLAGS $TR_CPPFLAGS"
CFLAGS="$CFLAGS $TR_CFLAGS"
CXXFLAGS="$CXXFLAGS $TR_CXXFLAGS"
LIBS="$LIBS $TR_LIBS"

AC_OUTPUT([Makefile src/Makefile editor_data/Makefile doc/Makefile])
